# tetr.lol

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
electron/: main.cjs
rust/lst-solver/: Cargo.toml
rust/lst-solver/src/: api.rs  board.rs  enumerate.rs  eval.rs  lib.rs  masks.rs  pieces.rs  solver.rs  spin.rs  srs.rs
rust/lst-solver/tests/: primitives-fixtures.json  primitives.rs  solver-fixtures.json  solver.rs
src/: main.ts
test/: allspin.test.ts  b2b.test.ts  book.test.ts  cc2.test.ts  core.test.ts  engine.test.ts  fourwide.test.ts  handling.test.ts  lst-plan-paths.test.ts  lst-quad-pool.test.ts  lst-solver.test.ts  lst-tier.test.ts  neural.test.ts  opener.test.ts  sound.test.ts  versus.test.ts  zenith.test.ts
tools/: alt-demo.ts  board-diag.ts  calibrate-zenith.mjs  cc2-lst-probe.ts  death-analysis.ts  death-learn.ts  death-probe.ts  engine-ab.ts  extract-tpse-sfx.mjs  fallback-clean-probe.ts  fallback-probe.ts  gen-fourwide-db.ts  gen-lst-cover.ts  gen-lst-db.ts  gen-lst-runs.ts  gen-quad-runs.ts  gen-quad-test.ts  harvest-core.ts  harvest-openers.ts  install-desktop.sh  loop-bench.ts  lst-fullq-ab.ts  lst-live-sim.ts  lst-mistake-diag.ts  lst-quad-live-sim.ts  lst-solve-bench.ts  lst-window-driver.ts  opener-probe.ts  overhang-probe.ts  pool-20-parallel.ts  pool-parallel.ts  quad-loop.ts  replay-check.ts  residue-check.ts  rust-fixtures.ts  rust-parity-verify.ts  rust-solver-fixtures.ts  solve-bench.ts  solver-live.ts  solver-loop-probe.ts  (+4 more)
wasm/: lst_solver.js  lst_solver_bg.wasm  (+1 more)
(+105 files in other folders)
