[package]
name = "lst-solver"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust/wasm port of the tetr-ai LST full-queue solver (solveLstRun)."

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
instant = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
instant = { version = "0.1", features = ["wasm-bindgen"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
